added additional endpoints
